--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Check and test
         run: |
-          cd wordle-program
+          cd pebbles-game
           cargo fmt --all check
           cargo clippy --all-targets -- -D warnings -A unused-imports
           cargo test
