--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,6 @@ jobs:
       - name: Check and test
         run: |
           cd pebbles-game
-          cargo fmt --all check
+          cargo fmt --all --check
           cargo clippy --all-targets -- -D warnings -A unused-imports
           cargo test
